@@ -1,3 +1,8 @@
+2012-11-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCtree_dec.hpp:
+	  Ensure we have an empty bag at the root in nice tree decompositions.
+
 2012-11-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* doc/sdccman.lyx: removed duplicate commands my lyx edit added
